[package]
name = "happv"
version = "0.1.0"
authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
description = "A minimal AppVeyor API library in Rust"
repository = "https://github.com/booyaa/happv"
documentation = "https://booyaa.github.io/happv/happv/index.html"
readme = "README.md"
keywords = ["AppVeyor","api","ci","pizza"]
license = "Apache-2.0"

[dependencies]
